# content-moderation-system

./: .gitignore  README.md  pyproject.toml
config/: training.yaml
mlflow_server/: Dockerfile
monitoring/prometheus/: prometheus.yml
notebooks/: eda_jigsaw.ipynb  experiment.ipynb  train_colab.ipynb
reports/: eda_report.md
scripts/: generate_bias_templates.py  run_bias_eval.py
src/: config.py
src/data/: counterfactual_augmentation.py  jigsaw_preprocessing.py
src/serving/: app.py  metrics.py  model_manager.py  schemas.py  tracing.py
src/training/: train_text_model.py
src/utils/: lexicon.py  logging.py
tests/: bias_constraints.py  conftest.py  test_bias_constraints.py
tests/unit/: test_bias_eval.py  test_config.py  test_counterfactual.py  test_data_validation.py  test_preprocessing.py  test_training_utils.py
